--- a/rtl/db/projeto-final-mc613-boliche.lpc.html
+++ b/rtl/db/projeto-final-mc613-boliche.lpc.html
@@ -16,6 +16,86 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
+<TD >k|kbd_bowling_inst|kb</TD>
+<TD >16</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >k|kbd_bowling_inst</TD>
+<TD >52</TD>
+<TD >0</TD>
+<TD >36</TD>
+<TD >0</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >k|kbdex_ctrl_inst|ps2_ctrl</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >10</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >2</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >k|kbdex_ctrl_inst</TD>
+<TD >6</TD>
+<TD >5</TD>
+<TD >0</TD>
+<TD >5</TD>
+<TD >51</TD>
+<TD >5</TD>
+<TD >5</TD>
+<TD >5</TD>
+<TD >2</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >k</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >2</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >t|vga_component|vgamem</TD>
 <TD >36</TD>
 <TD >0</TD>
@@ -81,7 +161,7 @@
 </TR>
 <TR >
 <TD >t</TD>
-<TD >14</TD>
+<TD >17</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
